// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course Evaluation Dialogs render evaluation dialog 1`] = `
<Dialog
  actions={
    Array [
      <FlatButton
        disabled={true}
        fullWidth={false}
        label={
            <FormattedMessage
                id="courseEvaluationNext"
                values={Object {}}
            />
        }
        labelPosition="after"
        labelStyle={
            Object {
                "fontFamily": "Roboto-Regular",
                "fontWeight": "700",
              }
        }
        onClick={[Function]}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={true}
        secondary={false}
    />,
    ]
  }
  autoDetectWindowHeight={true}
  autoScrollBodyContent={false}
  key="evaluationModal"
  modal={false}
  onRequestClose={[Function]}
  open={true}
  repositionOnUpdate={true}
  title="Avaliação do curso"
  titleStyle={
    Object {
      "fontFamily": "NaturaSans-Bold",
      "fontSize": "25px",
    }
  }
>
  <CourseEvaluationstyles__ContentWrapper>
    <CourseEvaluationstyles__TitleWrapper>
      Description
    </CourseEvaluationstyles__TitleWrapper>
    <CourseEvaluationstyles__RatingWrapper>
      <RatingAPILayer
        direction="ltr"
        emptySymbol={
          <ToggleStarBorder
            color="#f44336"
          />
        }
        fractions={1}
        fullSymbol={
          <ToggleStar
            color="#f44336"
          />
        }
        initialRating={0}
        onChange={[Function]}
        onHover={[Function]}
        placeholderSymbol={
          Object {
            "backgroundColor": "red",
            "border": "5px double white",
            "borderRadius": "50%",
            "display": "inline-block",
            "height": 30,
            "width": 30,
          }
        }
        quiet={false}
        readonly={false}
        start={0}
        step={1}
        stop={5}
      />
    </CourseEvaluationstyles__RatingWrapper>
  </CourseEvaluationstyles__ContentWrapper>
  <CourseEvaluationstyles__WrapperCount>
    1/2
  </CourseEvaluationstyles__WrapperCount>
</Dialog>
`;

exports[`Course Evaluation Dialogs renders feedback evaluation dialog 1`] = `
<Dialog
  actions={
    Array [
      <FlatButton
        disabled={false}
        fullWidth={false}
        label={
            <FormattedMessage
                id="ok"
                values={Object {}}
            />
        }
        labelPosition="after"
        labelStyle={
            Object {
                "fontFamily": "Roboto-Regular",
                "fontWeight": "700",
              }
        }
        onClick={[Function]}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={true}
        secondary={false}
    />,
    ]
  }
  autoDetectWindowHeight={true}
  autoScrollBodyContent={false}
  key="feedbackEvaluationModal"
  modal={false}
  open={true}
  repositionOnUpdate={true}
  title=""
  titleStyle={
    Object {
      "fontFamily": "NaturaSans-Bold",
      "fontSize": "25px",
    }
  }
/>
`;

exports[`Course Evaluation renders correctly when loading 1`] = `
<Loading
  background="transparent"
  visible={true}
  zIndex={9999}
/>
`;
